layout issues fixed

--- a/styles.css
+++ b/styles.css
@@ -1,204 +1,227 @@
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    /* border: 1px solid black; */
-}
+    /* border: 2px solid black; */
+  }
 
-:root {
-    --accent-color: rgb(200 224 241);
-    --main-color: #555;
-    --secondary: #333;
-}
-
-a {
-    text-decoration: none;
-    color: var(--main-color);
-}
-
+  :root {
+    --main-color: #ffe4e2;
+  }
 
 html {
-    scroll-padding-top: 200px; 
+    padding-top: 150px;
+    text-align: center;
+    scroll-padding-top: 200px;
 }
 
 body {
-    /* background-color: var(--main-color); */
-    font-family: 'PT Sans Narrow', sans-serif; 
-    background-image: url(/bg.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;   
-    
+    background-color: #eee;
+    font-family: 'Roboto', sans-serif;
 }
 
-h1 {
-    font-size: 3em;
-    font-weight: bolder;
-    word-spacing: -1px;
-    font-family: 'WindSong', cursive;
-    margin-bottom: 0;
+a {
+    color: black;
+    text-decoration: none;
+}
+
+h1, h2, a {
+    text-align: center;
+    padding-bottom: 10px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 h2 {
-    margin-bottom: 10px;
-    color: var(--secondary);
-}
-
-p { 
-    padding: 0 20px;
-}
-/* Start Nav */
-#navbar{
-    background-color: var(--accent-color);
-    color: var(--accent-color);
+    font-size: 2em;
 }
 
 .nav-container {
     display: flex;
+    flex-direction: row;
     position: fixed;
     top: 0;
-    background-color: var(--accent-color);
-    width: 100%;
-    height: 100px;
     left: 0;
+    background-color: var(--main-color) ;
+    width: 100%;
+    height: 120px;
     padding: 15px;
     align-items: center;
     justify-content: flex-end;
+    z-index: 1;
 }
 
-.name {
-    font-family: 'WindSong', cursive;
-    font-weight: bold;
+#header-img {
     position: absolute;
     left: 10px;
-    filter: drop-shadow(2px 2px 1px #333);
-    
+    bottom: 10px;
+    width: 100px;
+    border-radius: 52px;       
 }
-.nav-link, .name {
+
+.nav-link {
     padding: 10px;
     margin-right: 10px;
     font-size: 1.2em;
 }
 
-/* Start Welcome */
-
-#profile {
-    width: 200px;
-    border-radius: 75%;
-    align-items: center;
-}
-
-#welcome-section{ 
+#banner {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
-    background-color: var(--accent-color);
-    border-radius: 10% / 50%;
-    text-align: center;
-    margin-top: 200px;
-}
-
-#welcome-section p {
-    font-size: 1.25em;
-    word-spacing: 3px;
-    font-weight: lighter;
-    text-align: center;
-}
-
-/* Start About */
-
-#about-me {
-    display: flex;
-    flex-direction: column;
-    line-height: 2;
-    margin-top: 200px;
-}
-
-/* Start Projects */
-
-#projects, #about-me, #contact {
-    background-color: var(--accent-color);
-    font-size: 1.5em;
-    margin-top: 200px;
-    text-align: center;
-    padding: 25px 15px;
-    border-radius: 10% 40%/50% 20%;
-    width: 75%;
-    height: 100%;
     justify-content: center;
-    margin-left: 12.5%;
+    align-items: center;
 }
 
-#projects h2 {
-    margin-bottom: 50px;
+.banner-wrapper {
+    background-color: #ff857c8f;
+    padding: 10px 0;
 }
 
-.project-tile{
+#banner img{
+    width: 50%;
+}
+
+#banner h1 {
+    font-family: 'Abril Fatface', cursive;
+    font-style: italic;
+    font-size: 3em;
+    margin-bottom: 10px;
+    word-spacing: 10px;
+    letter-spacing: 5px;
+}
+
+#features {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    justify-content: center;
-    align-items: center;
+    padding: 25px;
+    align-content: center;
+    justify-items: center;
+    gap: 15%;
+    margin: 45PX;
+    grid-template-columns: repeat(3, 1fr);
 }
 
-.project-img {
-    width: 200px;
-    border-radius: 50%;
+.feature-item {
+    text-align: center;
+    line-height: 1.5;
 }
 
-.project-name {
-    margin-top: 0;
-    text-shadow: 1.5px 2px 2px rgb(169, 179, 179);
-}
 
-/* Start Contact */
-#contact {
+#join, #form {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    text-align: center;
+    align-items: center;
+    padding-top: 10px;
+}
+
+#email {
+    padding: 2px 0;
+    text-align: center;
+    margin: 8px 0;
+}
+
+#where-to-buy, #pricing {
+    display: flex;
+    flex-direction: column;
+    padding-top: 50px;
     align-items: center;
     text-align: center;
-    padding: 50px 5px; 
-    margin-bottom: 100px;
+
 }
 
-#contact h2 {
-    font-size: 2.5em;
-    margin: 50px 0;
+#where-to-buy p {
+    padding: 5px 100px;
 }
 
-.contact-links {
+#submit, .btn {
+    background-color: #ff5449;
+    border: none;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 10px 0;
+    text-align: center;
+    box-shadow: 2px 2px 2px #ffb4af;
+}
+
+#video {
+    padding-top: 10px;
+    align-items: center;
+    margin: 50px;
+}
+
+.option {
     display: flex;
+    flex-direction: row;
+    align-items: center;
     justify-content: center;
-    width: 100%;
-    max-width: 980px;
-    flex-wrap: wrap;
 }
 
-#contact a {
-    color: var(--main-color);
+.option p, .option h3 {
+    padding: 10px 10px;
+}
+ 
+.option1, .option2, .option3{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
-    padding: 0 24px;
-}
-/* .btn {
-    display: inline-block;
-    padding: 1rem 2rem;
-    border-radius: 2px;
-} */
-
-.contact-details{
-    text-shadow: 1.5px 2px 2px rgb(169, 179, 179);
+    margin: 10px;
+    border: 1px solid #e6e6e6;
+    border-radius: 3px;
+    background-color: #ffb4af;
 }
 
-.contact-details, .project-img {
-    transition: transform 0.3s ease-out;
-}
-.contact-details:hover,
-.project-img:hover {
-    transform: translateY(8px);
-  }
 
-footer{
-    border-top: 4px solid var(--main-color);
-    color: white;
+footer {
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    padding: 10px;
+    margin-bottom: 10px;
+    font-size: 0.7em;
+}
+
+
+
+@media screen and (max-width: 600px) {
+    #features {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .feature-item {
+        margin-top: 50px;
+    }
+
+    .feature-item h3 {
+        padding-bottom: 10px;
+    }
+
+    #video {
+        width: auto;
+    }
+    
+}
+
+@media screen and (max-width: 465px) {
+    #header-img {
+        width: 20%;
+        position: absolute;
+        top: -4px; 
+        left: 40vw;
+    }
+
+    .nav-container {
+        justify-content: center;
+        align-items: end;
+        padding-top: 10px;
+    }
+
+    .nav-container a {
+        font-size: 80%;
+    }
+
+    .nav-link {
+        padding-top: 10px;
+    }
 }
 
 @media screen and (prefers-reduced-motion: no-preference) {
@@ -207,27 +230,3 @@ footer{
     }
   }
 
-@media  screen and (max-width: 850px) {
-    .project-tile {
-        display: flex;
-        flex-direction: column;
-    }
-}
-
-@media screen and (max-width: 360px) {
-    .name {
-        position: absolute;
-        top: -4px; 
-        left: 35vw;
-
-    }
-
-    .nav-container {
-        justify-content: center;
-        align-items: end;
-    }
-
-    h1 {
-        font-size: calc(1.5rem + 3vw);
-    }
-}
